@@ -41,7 +41,9 @@ changes in sbcl-0.8.14 relative to sbcl-0.8.13:
        values as 0.
     ** literal commas as character parameters to FORMAT directives are
        parsed correctly.
-
+    ** literal spaces directly after ~<Newline> directives within a
+       format-logical-block (~:< ~@:>) do not induce :FILL-style
+       conditional newlines.
 
 changes in sbcl-0.8.13 relative to sbcl-0.8.12:
   * new feature: SB-PACKAGE-LOCKS. See the "Package Locks" section of
